# opendrift

./: .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  ANACONDA_SETUP  CODEOWNERS  Dockerfile  README.md  conda_ole.yml  conda_python2.yml  conda_python2_oil.yml  conda_python2_oil_netcdf141.yml  conda_python3.yml  environment.yml  example.py  example3d.py  example_backandforth.py  example_codegg.py  example_compare.py  example_cone.py  example_cone_tromso.py  example_fake.py  example_fjord.py  example_grid.py  example_grid_time.py  example_import.py  example_interpolation.py  example_leeway.py  example_leeway_cone.py  example_macondo.py  example_nofo.py  example_oil3d_verticalmixing.py  example_oil_budget.py  example_oil_ice.py  example_particle_mixing.py  example_reader_boundary.py  example_relative.py  example_roms_native.py  example_romseps.py  example_rungekutta_eddy.py  (+17 more)
.circleci/: config.yml  wake-up-thredds.py
.eggs/: setuptools_scm-1.15.7-py2.7.egg
.github/workflows/: auto-merge.yml  docker.yml
doc/: opendrift1.gaphor  opendrift_UML.gaphor  opendrift_flowchart.gaphor
docker/: Dockerfile  Dockerfile.oil.py2  Dockerfile.py2  Dockerfile.simon  Dockerfile.simon_oil  README.md  readme.md
docker_simon/: Dockerfile.oil
docs/: .gitignore  .readthedocs.yml  Makefile  containers.md  docenv.yml  opendrift_flowchart.gaphor  requirements.txt  rm-all-except.py  serve.py
docs/source/: choosing_a_model.rst  conf.py  docker.rst  gui.rst  history_link.rst  index.rst  install.rst  interaction_with_coastline.rst  list_oiltypes_rst.py  models.rst  oil_types.rst  performance.rst  references.rst  services.rst  tutorial.rst  writing_a_new_model.rst
elements/: README.md  __init__.py  elements.py  larvae.py  oil.py  passivetracer.py  test_elements.py
example/: README.md  backandforth.py  compare.py  cone.py  drifter.py  example.py  grid_time.py  import.py  interpolation.py  leeway.py  macondo.py  oil3d_verticalmixing.py  oil_budget.py  roms_native.py  rungekutta_norkyst.py  satellite.py  seed_demonstration.py  vietnam.py  windblow.py
examples/: .gitignore  OpenOil3D_ecom.py  README.rst  benchmark_examples.py  demo_trajectory_analysis.py  difusion_ECOM.py  example.py  example3d.py  example_2d.py  example_3d.py  example_FTLE_norkyst.py  example_LCS_norkyst.py  example_advection_schemes_eddy.py  example_backandforth.py  example_biodegradation.py  example_bivalve_larvae_Haliotis_iris.py  example_bivalvelarvae.py  example_bivalvelarvae_moana.py  example_checkerboard.py  example_chemicaldrift.py  example_cmems.py  example_coastline.py  example_coastline_options.py  example_codegg.py  example_compare.py  example_compare_oilbudgets.py  example_cone.py  example_cone_tromso.py  example_constant_current.py  example_contrail_ams_bgo.py  example_convolve_input.py  example_current_from_drifter.py  example_custom_xarray.py  example_depth.py  example_diffusion.py  example_diffusivities.py  example_dominating.py  example_double_gyre.py  example_double_gyre_LCS.py  example_double_gyre_LCS_particles.py  (+157 more)
examples/habitat/: National_distribution_paua.dbf  National_distribution_paua.shp  National_distribution_paua.shx  readme
examples/habitat_moana/: poly_habitat_taranaki.txt  poly_habitat_taranaki_bivalve.txt
examples/old/: example_openberg_det.py
examples/trajectory_analysis/: demo_trajectory_analysis.py  trajectory_analysis.py
examples_msl/: OpendriftConfigFile_README.rst  example_benchmark_regular.py  example_benchmark_unstructured.py  example_grid_msldata.py  example_grid_msldata_logprofile.py  example_grid_msldata_multireaders.py  example_grid_msldata_settling.py  example_grid_msldata_settling_logprofile.py  example_grid_msldata_withERCORE.py  example_msldata_crossing_longitude0.py  example_msldata_crossing_longitude180.py  example_msldata_crossing_longitude180_2.py  example_msldata_logprofile.py  example_msldata_multireaders.py  example_msldata_oceandrift.py  example_msldata_openoil3d.py  example_msldata_openoil3d_noaa.py  example_msldata_sedimentdrift3d.py  example_msldata_sedimentdrift3d_cur_wind_wave.py  example_msldata_sedimentdrift3d_stokes.py  example_run_config.py  example_schism_native.py  opendrift.config_WRAPPER.yml  opendrift.config_test.yml  opendrift.test.yml  opendrift_adding_currents.nc  opendrift_no_logprofile.nc  opendrift_using_moana_data.py  opendrift_using_moana_data_crossing_180deg.py  opendriftwrapper.py
examples_msl/config/: opendrift.config_OpenOil3D_cmems.yml  opendrift.config_oceandrift3d.yml  opendrift.config_oceandrift3d_cmems.yml  opendrift.config_oceandrift3d_from_thredds_netcdf.yml  opendrift.config_oceandrift3d_from_url.yml  (+10 more)
export/: io_netcdf.py
io/: io_netcdf.py
models/: buoyantparticle.py  eddydiffusivity.py  leeway.py  model_template.py  oceandrift.py  od3d.py  oil_types.txt  openDriftSimulation.py  opendrift.py  opendrift3D.py  openoil.py  openoil3D.py  pelagicegg.py  physics_methods.py  test_leeway.py  test_models.py  test_run.py  windblow.py
opendrift/: .gitignore  __init__.py  config.py  errors.py  legacy.py  read_me_reader_ecom_3D  timer.py  version.py
opendrift1/: readers_test.py  state.py  test_opendrift.py
readers/: interpolation.py  reader.py  reader_AromeFake.py  reader_ArtificialOceanEddy.py  reader_ROMSArctic20openDap.py  reader_ROMS_native.py  reader_basemap_landmask.py  reader_block.py  reader_grib.py  reader_netCDF_CF_generic.py  reader_norkystOpenDap.py  readers.py  test_block_interpolation.py  test_interpolation.py  test_reader_norkystOpenDap.py  test_readers.py
scripts/: hodograph.py  opendrift_plot.py  readerinfo.py
test_landmask/: results.txt  test_check_stranding_performance.py  test_compare_is_map_vs_inside_poly.py  test_landmask_map_size.py
tests/: conftest.py  fixtures.py  halo_test.py  performance_check.py  performance_test.py  performance_test_oil.py  test_backends.py  test_elements.py  test_interpolation.py  test_leeway.py  test_models.py  test_netcdf.py  test_oillibrary.py  test_physics.py  test_readers.py  test_run.py  test_run_3d.py  test_stranding.py  test_version.py  wps_test.py
(+491 files in other folders)
